# fishnet-cod

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
fishnet_api/: api_model.py  main.py  requirements.txt
fishnet_cod/: README.md  pyproject.toml  requirements.txt
fishnet_cod/api/: Dockerfile  api_model.py  controllers.py  main.py  utils.py
fishnet_cod/api/routers/: datasets.py  permissions.py  timeseries.py  users.py
fishnet_cod/core/: conf.py  model.py
fishnet_cod/local_listener/: Dockerfile  __main__.py
fishnet_cod/src/fishnet_cod/: execution.py  model.py  version.py
fishnet_cod/src/fishnet_cod/deployment/: __init__.py
fishnet_executor/: main.py  requirements.txt  test.py
src/: pyproject.toml
src/fishnet_cod/: deployer.py  local_executor.py  local_listener.py
src/fishnet_cod/api/: Dockerfile  README.md  api_model.py  auth.py  common.py  controller.py  controllers.py  main.py  requests.py  security.py  test.py  utils.py
src/fishnet_cod/api/db/: common.py  model.py
src/fishnet_cod/api/routers/: algorithms.py  authorization.py  datasets.py  executions.py  permissions.py  results.py  timeseries.py  users.py
src/fishnet_cod/api/tests/: users.py
src/fishnet_cod/api/tests/tests_routers/: test_algorithms.py  test_authorization.py
src/fishnet_cod/client/: api.py  data_downloader_tardis.py  handy.py
src/fishnet_cod/core/: README.md  conf.py  constants.py  execution.py  model.py  session.py  version.py
src/fishnet_cod/core/deployment/: __init__.py  discovery.py  sources.py
src/fishnet_cod/data_node/: main.py
src/fishnet_cod/executor/: main.py  test.py
src/fishnet_cod/local_listener/: Dockerfile  __main__.py
tests/api/: Binance_BTCBUSD_d.csv  conftest.py  integration.py  performance.py
tests/unit/api/: Binance_SOLBUSD_d.csv  test.py  test_common.py  users.py
