[project]
tags = ["aleph.im", "cod", "time-series", "network", "data-science"]

[tool.poetry]
name = "fishnet-cod"
version = "1.1.0"
description = "Compute-over-Data (CoD) network for time series data on Aleph.im"
authors = ["Mike Hukiewitz <mike.hukiewitz@robotter.ai>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "src/fishnet_cod"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
pandas = "^2.0.1"
PyNaCl = "^1.5.0"
base58 = "^2.1.1"
semver = "^3.0.0"
pydantic = "^1.10.5"
fastapi = "^0.95.1"
aiohttp = "^3.8.4"
python-multipart = "^0.0.6"
fastapi-walletauth = "1.0.0a3"
aars = "0.7.5"
aleph-sdk-python = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
black = "^23.3.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
