[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aneeque <aneequezubair9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aars = "^0.5.7"
aiohttp = "^3.8.4"
aleph-sdk-python = "^0.6.0"
fastapi = "^0.95.1"
pandas = "^2.0.0"
pydantic = "^1.10.7"
semver = "^3.0.0"
base58 = "^2.1.1"
pynacl = "^1.5.0"
requests = "^2.28.2"
uvicorn = "^0.21.1"
python-multipart = "^0.0.6"
fishnet-cod = "^0.1.3"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
